--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 }
   </style>
 
-  <body onload='run()' style='background:white'>
+  <body onload='run()' style='background:black'>
     <canvas id='scene' width='500px' height='500px' style='background:black'></canvas>
     <a href="https://github.com/anvaka/atree"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
   </body>
